--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -8,9 +7,18 @@
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-KNP46ND');</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FGT9ZPRR1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-3FGT9ZPRR1');
+  </script>
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Découvre le monde d'ASUS - Les meilleures cartes mères, cartes graphiques, moniteurs et bien plus encore dans la boutique en ligne ASUS.">
   <title>Asus Landing Page</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -51,8 +59,7 @@
   </nav>
   <div class="banner">
     <picture>
-      <source media="(min-width:650px)" srcset="assets/img/kv.jpg">
-      <source media="(min-width:465px)" srcset="assets/img/kv.jpg">
+      <source media="(max-width:730px)" srcset="assets/img/kv-mobile.jpg">
       <img src="assets/img/kv.jpg" alt="Soldes d'été jusqu'à -30%" width="100%">
     </picture>
   </div>
@@ -96,7 +103,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="button is-link is-fullwidth">Acheter</button>
+            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -112,7 +119,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="button is-link is-fullwidth">Acheter</button>
+            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
@@ -127,7 +134,7 @@
           nature. Doté de performances de pointe, d'une charnière ErgoLift innovante et d'un écran NanoEdge, il vous
           permet d'abattre quantité de travail.</p>
       </div>
-      <div class="columns">
+      <div class="columns is-desktop">
         <div class="column">
           <div class="product-container has-text-centered">
             <img class="product-img" src="assets/img/vivobook.png" alt="ASUS Vivobook S 14 OLED">
@@ -141,7 +148,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="button is-link is-fullwidth">Acheter</button>
+            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -157,7 +164,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="button is-link is-fullwidth">Acheter</button>
+            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -173,7 +180,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="button is-link is-fullwidth">Acheter</button>
+            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
@@ -201,7 +208,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="button is-link is-fullwidth">Acheter</button>
+            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -217,7 +224,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="button is-link is-fullwidth">Acheter</button>
+            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -233,12 +240,19 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="button is-link is-fullwidth">Acheter</button>
+            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <footer class="p-5 has-background-light">
+    <div class="content has-text-centered">
+      <p>
+        Stéphane Donna
+      </p>
+    </div>
+  </footer>
   <div id="modal-js" class="modal">
     <div class="modal-background"></div>
 
@@ -248,17 +262,16 @@
 
         <p class="has-text-centered mb-4">Le produit est disponible sur le store ASUS :</p>
         <div class="container has-text-centered">
-          <a href="https://www.asus.com/fr/store/" target="_blank"><img class="has-text-centered mb-4" src="assets/img/asus_logo_black.png" alt="ASUS Store"></a>
+          <a id="asus-store" href="https://www.asus.com/fr/store/" target="_blank"><img class="has-text-centered mb-4" src="assets/img/asus_logo_black.png" alt="ASUS Store"></a>
         </div>
         <p class="has-text-centered mb-4">ou bien chez nos partenaires revendeurs :</p>
-        <div class="columns">
-          <div class="column has-text-centered"><a href="https://www.fnac.com/" target="_blank"><img src="assets/img/fnac-logo.svg" alt="FNAC"></a></div>
-          <div class="column has-text-centered"><a href="https://www.darty.com/" target="_blank"><img src="assets/img/darty-logo.svg" alt="Darty"></a></div>
-          <div class="column has-text-centered"><a href="https://www.ldlc.com/" target="_blank"><img src="assets/img/ldlc-logo.png" alt="LDLC"></a></div>
+        <div class="columns is-mobile">
+          <div class="column has-text-centered"><a id="fnac" href="https://www.fnac.com/" target="_blank"><img src="assets/img/fnac-logo.svg" alt="FNAC"></a></div>
+          <div class="column has-text-centered"><a id="darty" href="https://www.darty.com/" target="_blank"><img src="assets/img/darty-logo.svg" alt="Darty"></a></div>
+          <div class="column has-text-centered"><a id="ldlc" href="https://www.ldlc.com/" target="_blank"><img src="assets/img/ldlc-logo.png" alt="LDLC"></a></div>
         </div>
       </div>
     </div>
-
     <button class="modal-close is-large" aria-label="close"></button>
   </div>
   <script type="text/javascript" src="assets/js/script.js"></script>
