--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           obstacle
           à votre potentiel créatif.</p>
       </div>
-      <div class="columns">
+      <div class="columns is-desktop">
         <div class="column">
           <div class="product-container has-text-centered">
             <img class="product-img" src="assets/img/zenbook.png" alt="Zenbook S13 OLED">
@@ -87,7 +87,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -103,7 +103,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -119,7 +119,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -164,7 +164,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -180,7 +180,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
@@ -194,7 +194,7 @@
           industry. Our premium devices elevate gaming experiences with best-in-class displays, top tier graphics, and
           innovative cooling solutions that take performance to new heights.</p>
       </div>
-      <div class="columns">
+      <div class="columns is-desktop">
         <div class="column">
           <div class="product-container has-text-centered">
             <img class="product-img" src="assets/img/rog.png" alt="ROG Strix G18 / G16">
@@ -208,7 +208,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -224,7 +224,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -240,7 +240,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
