--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -103,7 +103,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -119,7 +119,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -164,7 +164,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -180,7 +180,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
@@ -208,7 +208,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -224,7 +224,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
         <div class="column">
@@ -240,7 +240,7 @@
               <span class="new-price">1 999,99 €</span>
               <span class="price">2 999,99 €</span>
             </div>
-            <button id="cta-buy" class="js-modal-trigger button is-link is-fullwidth" data-target="modal-js">Acheter</button>
+            <button  class="js-modal-trigger cta-buy button is-link is-fullwidth" data-target="modal-js">Acheter</button>
           </div>
         </div>
       </div>
