--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation" id="navbar">
     <div class="navbar-brand">
       <a class="navbar-item" href="index.html">
-        <img src="assets/img/asus_logo_black.png" width="112" height="28">
+        <img src="assets/img/asus_logo_grey.png" width="112">
       </a>
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -262,7 +262,7 @@
 
         <p class="has-text-centered mb-4">Le produit est disponible sur le store ASUS :</p>
         <div class="container has-text-centered">
-          <a id="asus-store" href="https://www.asus.com/fr/store/" target="_blank"><img class="has-text-centered mb-4" src="assets/img/asus_logo_black.png" alt="ASUS Store"></a>
+          <a id="asus-store" href="https://www.asus.com/fr/store/" target="_blank"><img class="has-text-centered mb-4" src="assets/img/asus_logo_grey.png" alt="ASUS Store"></a>
         </div>
         <p class="has-text-centered mb-4">ou bien chez nos partenaires revendeurs :</p>
         <div class="columns is-mobile">
